# LVIE

./: .gitignore  Cargo.toml  README.md  build.rs  main.py  prova.py  prova.xml  sample_interface.slint  view.py
.LVIE/: keyboard_shortcuts.xml  settings.xml
LVIE/: Cargo.toml  build.rs
LVIE-GPU/: Cargo.toml
LVIE-GPU/shaders/: convert_to_oklab.wgsl  convolution.wgsl  exposition.wgsl  grayscale.wgsl  saturation.wgsl  sharpening.wgsl  test_hsl_conversion.wgsl  whitebalance.wgsl  whitebalance_fast.wgsl
LVIE-GPU/shaders/conversions/: hsl_to_rgb.wgsl
LVIE-GPU/shaders/conversions/16bit/: rgb_to_hsl.wgsl  rgb_to_oklab.wgsl
LVIE-GPU/shaders/conversions/32bit/: rgb_to_hsl.wgsl  rgb_to_oklab.wgsl
LVIE-GPU/src/: GPU.rs  errors.rs  img2win_convolution.rs  main.rs  shader_compiler.rs  test_conversion.rs  texturebuffers.rs
LVIE/src/: _ùmain.rs  core.rs  history.rs  img_processing.rs  img_processing_generic.rs  loading.rs  main.rs  raw_decoder.rs  settings.rs
LVIE/src/core/: data.rs  filters.rs  imagebuffers.rs  masks.rs  mod.rs  processors.rs  rendering.rs
LVIE/src/core/callbacks/: curvecallbacks.rs  maskcallbacks.rs  mod.rs  screencallbacks.rs  settingscallbacks.rs  toolbarcallbacks.rs
LVIE/src/history/: builder.rs  callbacks.rs  mod.rs
LVIE/src/history/operations/: mod.rs
LVIE/src/hsl/: mod.rs
LVIE/src/settings/: history.rs  ketboard_shortcuts.rs  keyboard_shortcuts.rs  mod.rs
LVIE/ui/: LVIE.slint  prova.slint
LVIE/ui/widgets/: curve.slint  filter.slint  imagespace.slint  prova.slint  screen.slint  settings.slint  toolbar.slint
LVIE/ui/widgets/canvas/: line.slint
LVIE/ui/widgets/menu/: menu.slint  popup_menu.slint
LVIE/ui/widgets/progress_bar/: progress_bar.slint
LVIE/ui/widgets/slider/: slider.slint
LVIElib/: Cargo.toml  convolution.py
LVIElib/src/: contrast.rs  image_geometry.rs  lib.rs  linear_rgb.rs  main.rs  oklab-old.rs  (+4 more)
RustBackend/: Cargo.toml  pyproject.toml
Tests/: Cargo.toml
core/: Viewer.py  __init__.py  app_pages.py  backend.py  utils.py
image_generator/: Cargo.toml  README.md
images/: README.md
src/: buffer_struct.rs  buflib.rs  dec_buffer_struct.rs  helpers.rs  lib.rs  loading.rs  log_mask.rs  main.rs  old_lib.rs  python_binding.rs  rustlib.pyi  test.rs
(+28 files in other folders)
