[package]
name = "LVIE"
version = "0.0.1"
build = "build.rs"
edition = "2021"

[dependencies]
slint = "1.1.0"
image = "0.24.7"
winit = "0.28.6"
i-slint-backend-winit = "=1.1.0"
rfd = "0.11.4"
LVIElib = {path = "../LVIElib"}
indexmap = "1.7.0"
itertools = "0.11.0"
rayon = "1.8.0"


[build-dependencies]
slint-build = "1.1.0"