[package]
name = "LVIE"
version = "0.0.1"
build = "build.rs"
edition = "2021"

[dependencies]
slint = "1.3.0"
image = "0.24.7"
winit = {version = "0.28.6", features = ["x11"]}
i-slint-backend-winit = "=1.5.0"
rfd = "0.11.4"
LVIElib = {path = "../LVIElib"}
LVIE-GPU = {path = "../LVIE-GPU"}
indexmap = "1.7.0"
itertools = "0.11.0"
rayon = "1.8.1"
num-traits = "0.2.16"
rawloader = "0.37.1"

[build-dependencies]
slint-build = "1.3.0"