[package]
name = "LVIE"
version = "0.0.1"
build = "build.rs"
edition = "2021"

[dependencies]
slint = "1.6.0"
i-slint-backend-winit = "=1.6.0"
image = "0.24.7"
winit = {version = "0.28.6", features = ["x11"]}
rfd = "0.11.4"
LVIElib = {path = "../LVIElib"}
LVIE-GPU = {path = "../LVIE-GPU"}
itertools = "0.11.0"
rayon = "1.8.1"
num-traits = "0.2.16"
rawloader = "0.37.1"
quick-xml = {version="0.31.0", features=["serialize"]}
serde = { version = "1.0", features = ["derive"] }
uuid = {version="1.9.1", features=["v4"]}
bytemuck = "1.12"

[build-dependencies]
slint-build = "1.6.0"